fix: lock page scroll and use overlay scrollbar when opening modal.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ body.body-class {
     margin: 0;
     padding: 0;
     background-color: #404040;
+    overflow: hidden;
+}
+
+#main-html {
+    height: 100vh;   
+    height: 100dvh;  
+    overflow-y: auto !important;
 }
 
 .main-container {
